--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ NODE_ENV=developement
 PORT=3000
 DATABASE_URL=mongodb+srv://rodro:rodro1122@car-service.rhyxtaz.mongodb.net/express-project?retryWrites=true&w=majority&appName=car-service
 BCRYPT_SALT_ROUNDS=12
+DEFAULT_PASS=rodrO34Student
